// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jumbotron Component matches Jumbotron 1`] = `
.c0 {
  margin-bottom: 2rem;
  background-color: #f0f0f0;
  padding: 2rem 1rem;
  border-radius: 0.3rem;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    padding: 4rem 2rem;
  }
}

@media (max-width:61.99875em) {
  .c0 {
    padding: 4rem 2rem;
  }
}

<div
  class="sc-fznyAO c0"
/>
`;

exports[`Jumbotron Component matches Jumbotron fluid 1`] = `
.c0 {
  margin-bottom: 2rem;
  background-color: #f0f0f0;
  padding-right: 0;
  padding-left: 0;
  border-radius: 0;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    padding: 4rem 2rem;
  }
}

@media (max-width:61.99875em) {
  .c0 {
    padding: 4rem 2rem;
  }
}

<div
  class="sc-fznyAO c0"
/>
`;

exports[`Jumbotron Component matches Jumbotron noRadius 1`] = `
.c0 {
  margin-bottom: 2rem;
  background-color: #f0f0f0;
  padding: 2rem 1rem;
  border-radius: 0;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    padding: 4rem 2rem;
  }
}

@media (max-width:61.99875em) {
  .c0 {
    padding: 4rem 2rem;
  }
}

<div
  class="sc-fznyAO c0"
/>
`;

exports[`Jumbotron Component matches Jumbotron pill 1`] = `
.c0 {
  margin-bottom: 2rem;
  background-color: #f0f0f0;
  padding: 2rem 8rem;
  border-radius: 10rem;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:36em) {
  .c0 {
    padding: 4rem 8rem;
  }
}

@media (max-width:61.99875em) {
  .c0 {
    padding: 4rem 4rem;
  }
}

<div
  class="sc-fznyAO c0"
/>
`;
